--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,15 +7,35 @@
 /* body */
 .all_content{
   background:#ECF1F6;
+  color: #494949;
 }
 ul,
 li{
   list-style:none;
 }
 
+/* ログイン画面 */
+.header_logo{
+  width: 10%;
+  position: absolute;
+  top: 150px;
+  left: 644px;
+}
+
+.content {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 1px 5px 10px 1px rgba(0, 0, 0, 0.2);
+  padding: 0 20px;
+}
+
+.text-center {
+  margin: 10px 0 20px 0;
+}
+
 /* サイドバー */
 .sidebar{
-  width:150px;
+  width:230px;
   height:100vh;
   background-color:#03AAD2;
   font-weight:bold;
@@ -27,10 +47,47 @@ li{
   color:#FFF;
 }
 
+.sidebar_content {
+  padding: 16px;
+}
+
+.sidebar_content p:first-child{
+  margin-bottom: 10px;
+}
+
+.bi {
+  font-size: 18px;
+  color: #fff;
+  margin-right: 10px;
+}
+
+.bi-house {
+  font-size: 21px;
+  position: relative;
+  right: 1px;
+  top: 1px;
+}
+
+.bi-box-arrow-right {
+  font-size: 23px;
+  position: relative;
+  left: 1px;
+  top: 3px;
+}
+.bi-chat-left-text-fill {
+  position: relative;
+  top: 2px;
+}
+
+
 /* トップページ */
 .user_status{
   border-radius:10px;
   background:#FFF;
+}
+
+.content_name {
+  margin: 10px;
 }
 
 /* スクール予約関連 */
@@ -49,18 +106,41 @@ li{
 .calendar-td{
   min-width:100px;
 }
+.reserve-calendar-td{
+  min-width:100px;
+  padding: 20px 0!important;
+}
 .day_part{
+  color:#5DC0E3;
+  font-size:12px;
+}
+.day_part_count{
   color:#494949;
   font-size:12px;
 }
+.day_part_box {
+  margin-left: 20px;
+  width: 20px;
+  text-align: center;
+}
+.day_part_count_box {
+  margin-left: 20px;
+  width: 20px;
+  text-align: center;
+}
 .adjust-table{
-  width:70% !important;
+  width:95% !important;
 }
 .adjust-table td{
-  padding:0 !important;
+  padding:8px !important;
+}
+
+.adjust-table th{
+  font-size: 0.9rem;
 }
 .adjust-area p{
   justify-content: space-around;
+  font-size: 0.8rem;
 }
 .adjust-table-btn{
   width:70%;
@@ -83,17 +163,33 @@ li{
 .modal__content{
     background: #fff;
     left: 50%;
-    padding: 40px;
+    padding: 40px 160px;
     position: absolute;
     top: 50%;
     transform: translate(-50%,-50%);
     width: 60%;
 }
 
-/* 追加 */
+.modal-inner-title input,
+.modal__content textarea
+{
+  border: 1px solid #DEE2E6;
+  background: #FFF;
+  /* border-radius: 3px; */
+}
 .modal.modal-show {
   display: block;
 }
+
+.modal_close_btn {
+  position: relative;
+  right: 136px;
+}
+
+.modal_edit_btn {
+    position: relative;
+    left: 136px;
+  }
 
 
 /* 掲示板 */
@@ -103,6 +199,8 @@ li{
 .post_create_area{
   background:#FFF;
   border-radius:10px;
+  width: 57%;
+  margin-right: 90px;
 }
 .post_create_area textarea{
   resize:none;
@@ -123,14 +221,201 @@ li{
 .un_like_btn{
   cursor:pointer;
 }
-.un_like,
 .un_like_btn{
-  color:#E2254D;
+  color: #E2254D;
+}
+.like_btn {
+  color:#999;
 }
 .error_message{
   font-size:12px;
   color:red;
 }
+
+.post_name {
+  font-weight: bold;
+  color: #999999;
+}
+
+.post_title a{
+  color: #494949;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.post_title a:hover{
+  color: #494949;
+}
+
+.category_btn {
+  font-size: 12px;
+  border-radius: 7px;
+  padding: 0 5px;
+  border: none;
+  background: #08A8D2;
+  color: #FFF;
+  height: 26px;
+}
+
+.action {
+  position: absolute;
+  right: 460px;
+}
+
+.counts{
+  color: #999;
+}
+
+.post_btn {
+  font-size: 12px;
+  border-radius: 7px;
+  border: none;
+  background: #08A8D2;
+  height: 36px;
+  text-align: center;
+  cursor: pointer;
+  line-height: 36px;
+}
+.post_btn a{
+  font-size: 14px;
+  color: #FFF;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.post_btn a:hover{
+  color: #FFF;
+  text-decoration: none;
+}
+
+.like_post_btn {
+    font-size: 12px;
+      border-radius: 7px;
+      border: none;
+      background: #E38EAA;
+      height: 36px;
+      line-height: 36px;
+      text-align: center;
+      color: #fff;
+      width: 49%;
+      margin-right: 3px;
+      cursor: pointer;
+}
+.my_post_btn {
+    font-size: 12px;
+      border-radius: 7px;
+      border: none;
+      background: #EBBC5D;
+      height: 36px;
+      line-height: 36px;
+      text-align: center;
+      color: #fff;
+      width: 49%;
+      cursor: pointer;
+}
+
+.search_box {
+  padding: 0 10px;
+}
+
+.search {
+  margin: 20px 0;
+}
+
+.search input[type="text"]{
+  border: 2px solid #DEE2E6;
+  border-radius: 7px 0 0 7px;
+  height: 36px;
+  width: 70%;
+  background: #ECF1F5;
+}
+.search input[type="submit"]{
+  border: 1px solid #0CA7D2;
+  border-radius: 0 7px 7px 0;
+  height: 36px;
+  width: 30%;
+  background: #0CA7D2;
+  color: #fff;
+}
+
+.other_area {
+  width: 26%;
+  padding-right: 50px;
+}
+
+/* アコーディオンメニュー */
+.category-content {
+  display: none;
+}
+
+.category_search_list_btn,
+.search_list_btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  top: -36px;
+  left: 250px;
+  background-color: inherit;
+}
+
+.category_search_list_btn .inn::before,
+.search_list_btn .inn::before{
+  position: absolute;
+  content: "";
+  top: 0%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  transform: translate(-50%, -50%) rotate(135deg);
+  border-top: 2px solid #494949;
+  border-right: 2px solid #494949;
+  transition: 0.3s ease;
+}
+
+.category_search_list_btn.is-open .inn::before,
+.search_list_btn.is-open .inn::before
+{
+  top: 60%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.main_category
+{
+  border-bottom: 1px solid #999;
+  text-align: left;
+  display: block;
+  width: 100%;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+}
+
+.main_categories {
+  margin-bottom: 30px;
+}
+
+.sub_categories_search {
+  border-bottom: 1px solid #999;
+  padding: 10px;
+  margin: 0 10px;
+}
+
+.sub_categories_search a{
+  color: #494949;
+}
+.sub_categories_search a:hover{
+  color: #494949;
+}
+
+.category_search {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.sub_categories_search:first-child {
+  margin-top: 0px;
+  padding-top: 0;
+}
+
 
 /* 掲示板 詳細画面 */
 .contributor{
@@ -138,16 +423,18 @@ li{
   color:#999;
   font-weight:bold;
 }
-.detsail_post_title{
+.detail_post_title{
   font-size:14px;
 }
-.detsail_post{
+.detail_post{
   font-size:12px;
   color:#9E9E9E;
+  margin-top: 10px;
 }
 .detail_inner_head{
   display:flex;
   justify-content: space-between;
+  float: right;
 }
 .edit-modal-open{
   cursor:pointer;
@@ -159,9 +446,53 @@ li{
 .edit-modal-btn{
   justify-content: space-between;
 }
+
+.post_delete a{
+  color: #fff;
+}
+.post_delete a:hover{
+  color: #fff;
+  text-decoration: none;
+}
+
+.detail_container,
+.comment_container {
+  background: #FFF;
+  border-radius: 10px;
+}
+
+.edit_error ul{
+  margin: 0;
+  position: relative;
+  top: 5px;
+}
+.edit_error ul li{
+  position: relative;
+  top: 3px;
+}
+
+.detail_inner_head .detail_btn .edit_btn,
+.detail_inner_head .detail_btn .post_delete
+{
+  width: 50px;
+  height: 30px;
+  font-size: 12px;
+}
+
+.edit_area {
+  background: #fff;
+  border-radius: 7px 7px 0 0;
+}
+
+
 /* 掲示板 コメント */
-.comment_container{
+.comment_wrapper{
   background:#FFF;
+  border-radius: 0 0 7px 7px;
+}
+.comment_container {
+  border-radius: 7px;
+  background: #fff;
 }
 .comment_area p,
 .comment_area input{
@@ -179,11 +510,61 @@ li{
   font-size:12px;
 }
 
+.edit_name,
+.comment_name {
+  margin: 10px 0;
+  color: #999;
+}
+
+.comment_area .comment {
+  font-weight: normal;
+}
+.comment_error {
+  margin-bottom: 10px;
+}
+
+.comment_btn {
+  position: relative;
+  left: 410px;
+  display: block;
+  margin-top: 10px;
+}
+
+
+/* 掲示板　投稿 */
+.category_select select,
+.title_form input,
+.category_area input,
+.category_area select
+{
+  border: 1px solid #DEE2E6;
+  border-radius: 3px;
+  height: 28px;
+}
+.post_form textarea,
+.comment_area textarea{
+  border: 1px solid #DEE2E6;
+  border-radius: 3px;
+}
+
+
 /* 掲示板　カテゴリー */
 .category_area{
   background:#FFF;
   border-radius:10px;
+  width: 100%;
 }
+
+.main_category_area {
+  margin-bottom: 30px;
+}
+
+.category_area input,
+.category_area select {
+  width: 100%;
+  margin: 3px 0;
+}
+
 .category_box{
   border-radius:5px;
   padding:3px;
@@ -191,12 +572,13 @@ li{
   font-size:10px;
   color:#FFF;
 }
+
 .category_btn{
   font-size:12px;
   border-radius:5px;
   padding:0 5px;
   border:none;
-  background:#999;
+  background:#08A8D2;
   color:#FFF;
 }
 .main_categories span,
@@ -209,41 +591,300 @@ li{
 .reserve_users_area{
   display:flex;
   flex-wrap:wrap;
-  width:800px;
+  width:850px;
   margin:10px auto;
   height:80vh;
   overflow: scroll;
-  padding:10px;
-  background:#FFF;
+  padding-right: 0px;
   border-radius:5px;
 }
 .reserve_users_area span{
   font-size:12px;
 }
 .one_person{
-  width:250px;
-  height:250px;
+  width: calc(25% - 10px);
+  height: 32%;
+  margin: 5px 5px 0px 5px;
+  padding: 10px 20px;
 }
-.search_conditions span{
-  cursor:pointer;
-}
+
 .search_conditions_inner{
   display:none;
-  background:#FFF;
 }
-.subject_edit_btn{
+
+.search_criteria_addition label {
+  cursor:pointer;
+  border-bottom: 1px solid #999;
+  padding-right: 100px;
+  width: 80%;
+  padding-bottom: 5px;
+  display: block;
+}
+
+.optional_subject_register{
   font-size:12px;
-  color:#0000FF;
+  color:#04A9D2;
   cursor:pointer;
 }
 .subject_inner{
   display:none;
 }
 
+.user_profile a{
+  color: #04A9D2;
+  font-weight: bold;
+}
+.user_profile a:hover{
+  color: #04A9D2;
+  font-weight: bold;
+}
+
+.gray {
+  color: #999;
+  font-weight: bold;
+}
+.more_gray {
+  font-weight: bold;
+}
+
+.search_area {
+  padding: 30px 0;
+}
+
+.search_area label {
+  color: #325476;
+  margin-bottom: 2px;
+}
+.search_area .search_form label {
+  font-size: 1.2rem;
+}
+
+.search_form,
+.user_category_form,
+.updown_form,
+.sex_form,
+.role_form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.search_form input {
+  border: none;
+  background: #E0E5E9;
+  border-radius: 7px;
+  height: 40px;
+  width: 75%;
+  margin-bottom: 12px;
+}
+.user_category_form select,
+.updown_form select,
+.role_form select {
+  border: none;
+  background: #E0E5E9;
+  border-radius: 7px;
+  height: 30px;
+  width: 30%;
+  color: #757575;
+  text-indent: 5%;
+  font-size: 0.8rem;
+  margin-bottom: 12px;
+}
+
+.role_form select{
+  width: 40%;
+}
+
+.search_form input::placeholder
+{
+  text-indent: 5%;
+  font-size: 0.9rem;
+}
+
+.subject_form{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.subject_form_list {
+    width: calc(33.33% - 10px);
+      /* 3つ横並びにするために幅を33.33%に設定 */
+      margin: 2px;
+      box-sizing: border-box;
+      /* パディングを含むようにボックスサイズを設定 */
+}
+
+.search_form_content .search_form_btn {
+  font-size: 12px;
+  border-radius: 7px;
+  border: none;
+  background: #08A8D2;
+  height: 36px;
+  text-align: center;
+  cursor: pointer;
+  line-height: 36px;
+  margin: 20px 0;
+  width: 80%;
+}
+
+.search_form_btn input{
+  border: none;
+  background: inherit;
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+}
+
+.reset_btn {
+  width: 80%;
+}
+
+.reset_btn input {
+  border: none;
+  background: inherit;
+  color: #0CA7D2;
+  display: block;
+  margin: 0 auto;
+}
+
+/* プロフィール詳細 */
+.select_subject_list {
+  width: 30%;
+}
+.subject_select_form .subject_registration input{
+  position: relative;
+  top: -40px;
+  left: 200px;
+  font-size: 0.9rem;
+  height: 36px;
+  line-height: 18px;
+  margin-left: 50px;
+}
+
+.select_subject_list_btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  top: -6px;
+  left: 10px;
+  background-color: inherit;
+}
+
+.select_subject_list .select_subject_list_btn .inn::before {
+  position: absolute;
+  content: "";
+  top: 0%;
+  left: 50%;
+  width: 8px;
+  height: 8px;
+  transform: translate(-50%, -50%) rotate(135deg);
+  border-top: 2px solid #03AAD2;
+  border-right: 2px solid #03AAD2;
+  transition: 0.3s ease;
+}
+
+.select_subject_list .select_subject_list_btn.is-open .inn::before {
+  top: 60%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
 
 
-
+/* カレンダー */
 .past-day {
-  background-color: #d3d3d3;
-  /* グレーの背景色 */
+  background-color: #EEEEEE;
+}
+
+.saturday {
+  color: #0000FF;
+}
+
+.sunday {
+  color: #FF0000;
+}
+
+.adjust-area .reserve_day input {
+  border: 1px solid #E2E5E8;
+  background: inherit;
+  text-indent: 20%;
+  width: 38%;
+}
+
+.reserve_setting_calendar,
+.reserve_setting_detail{
+    background: #fff;
+      border-radius: 7px;
+      box-shadow: 1px 5px 10px 1px rgba(0, 0, 0, 0.2);
+      padding: 20px 20px 40px 20px;
+      width: 80%;
+      margin: 0 auto;
+}
+
+.adjust-table-btn .admin_reserve_btn {
+  position: relative;
+  height: 34px;
+  line-height: 20px;
+  top: -48px;
+  left: 20px;
+}
+
+.day {
+  margin-bottom: 0;
+  padding-bottom: 8px;
+  font-size: 0.8rem;
+}
+
+.reserve_check_day .day {
+  font-size: 0.8rem;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.reserve_btn {
+  position: relative;
+  left: 118px;
+  top: 10px;
+}
+
+.cancel_btn {
+  width: 50%;
+  height: 20%;
+}
+
+
+/* 予約詳細 */
+.colum_name {
+  background: #08A8D2;
+  color: #fff;
+  text-align: center;
+}
+.colum th:first-child{
+  width: 16%;
+}
+.colum th:nth-child(2),
+.colum th:nth-child(3) {
+  width: 42%;
+}
+
+.detail_container {
+  width: 80%;
+  background: inherit;
+}
+
+.reserve_setting_detail {
+  padding: 5px;
+  width: 90%;
+}
+
+.detail_content:nth-child(even) {
+  background-color: #ffffff;
+  border-top: 1px solid #E2E5E8;
+  border-bottom: 1px solid #E2E5E8;
+  /* 奇数行の色 */
+}
+.detail_content:nth-child(odd) {
+  background-color: #E5F5F9;
+  /* 偶数行の色 */
 }
