--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,18 +8,33 @@
 .all_content{
   background:#ECF1F6;
   color: #494949;
+  min-height: 100vh;
 }
 ul,
 li{
   list-style:none;
 }
 
+/* 新規登録 */
+.register_box {
+  margin: 30px 0;
+}
+
 /* ログイン画面 */
+.login_box {
+margin-top: 250px;
+}
+
+
 .header_logo{
-  width: 10%;
-  position: absolute;
-  top: 150px;
-  left: 644px;
+  width: 180px;
+  position: relative;
+  top: 220px;
+  left: 630px;
+  text-align: center;
+}
+.header_logo img{
+  width: 90%;
 }
 
 .content {
@@ -36,7 +51,7 @@ li{
 /* サイドバー */
 .sidebar{
   width:230px;
-  height:100vh;
+  min-height: 100vh;
   background-color:#03AAD2;
   font-weight:bold;
 }
@@ -168,6 +183,8 @@ li{
     top: 50%;
     transform: translate(-50%,-50%);
     width: 60%;
+    text-align: left;
+    color: #494949;
 }
 
 .modal-inner-title input,
@@ -175,7 +192,6 @@ li{
 {
   border: 1px solid #DEE2E6;
   background: #FFF;
-  /* border-radius: 3px; */
 }
 .modal.modal-show {
   display: block;
@@ -189,8 +205,18 @@ li{
 .modal_edit_btn {
     position: relative;
     left: 136px;
-  }
+}
 
+.modal_button{
+  display: flex;
+  justify-content: space-between;
+}
+
+button.submit_button_close,
+button.submit_button_cancel{
+  width: 100px;
+  font-size: 0.9rem;
+}
 
 /* 掲示板 */
 .sub_categories{
