--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,6 +175,12 @@ margin-top: 250px;
     position: absolute;
     width: 100%;
 }
+.cancel_bg{
+    background: rgba(0,0,0,0.15);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
 .modal__content{
     background: #fff;
     left: 50%;
@@ -435,6 +441,9 @@ button.submit_button_cancel{
 
 .sub_categories_search a{
   color: #494949;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 .sub_categories_search a:hover{
   color: #494949;
